# booking-interview

./: .dockerignore  .gitignore  Dockerfile  README.md  booking_api.postman_collection.json  docker-compose.yml  entrypoint.sh  pyproject.toml
booking/: admin.py  exceptions.py  models.py  serializers.py  services.py  tests.py  urls.py
booking/migrations/: 0001_initial.py  0002_seed_data.py
booking/models/: __init__.py  reservation.py  resource.py  user.py
booking/serializers/: __init__.py  reservation.py  resource.py  user.py
booking/services/: __init__.py  reservations.py  resources.py
booking/views/: __init__.py  reservation.py  resource.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
